# harness-core

./: .bazelproject  .deepsource.toml  .license-header-apache.txt  .license-header-polyform.txt  .mailmap  .source-available-files.txt  .ticonfig  0.txt  0001-CDP-16114-k8s-state.patch  0002-CDP-16114-changes.patch  0003-CDP-16114-formatting.patch  0004-CDP-16114-formatting.patch  BUILD.bazel  License.md  README.md  WORKSPACE  abc.sh  bazelrc.common  bazelrc.coverage  bazelrc.gcp  bazelrc.local  bazelrc.remote  build-properties.bzl  build.properties  license.txt  logfile  macros.bzl  maven_install.json  pom.xml  preqa_build.properties  protocol.info  sources.txt  startui.sh  t
110-change-data-capture/: BUILD.bazel  config.yml  pom.xml
110-change-data-capture/container/: BUILD.bazel
110-change-data-capture/container/scripts/: replace_configs.sh
110-change-data-capture/src/main/java/io/harness/: BigQueryService.java  BigQueryServiceImpl.java  BoundedExecutorService.java  CDCEntity.java  CDCEntityBulkMigrationTask.java  CDCStateEntity.java  ChangeDataCaptureApplication.java  ChangeDataCaptureBulkMigrationHelper.java  ChangeDataCaptureBulkSyncTask.java  ChangeDataCaptureHelper.java  ChangeDataCaptureJob.java  ChangeDataCaptureModule.java  ChangeDataCaptureServiceConfig.java  ChangeDataCaptureSyncService.java  ChangeDataCaptureTask.java  ChangeEventProcessor.java  ChangeEventProcessorTask.java  ChangeHandler.java  MongoTagsConfig.java  RegistrarsModule.java  TimeScaleDBChangeHandler.java
110-change-data-capture/src/test/java/io.harness/: CDCAppStartupTest.java
121-instance/: BUILD.bazel
121-instance/src/main/resources/timescale/: create_instance_stats_day_table.sql  create_instance_stats_hour_table.sql  create_instance_stats_table.sql
121-instance/src/test/java/io/harness/: InstanceTestRule.java  InstancesTestBase.java
190-deployment-functional-tests/: BUILD.bazel
190-deployment-functional-tests/src/test/resources/k8s/: custom-params-overrides-script.sh  custom-values-overrides-script.sh
250-watcher/: BUILD.bazel  pom.xml
250-watcher/src/test/java/service/: WatcherServiceImplTest.java
250-watcher/src/test/resources/: dependenciesInRestCapsule.txt
270-delegate-service-app/: BUILD.bazel  config_delegate_svc.yml  delegate-service-config.yml  module-dependency.hash
270-delegate-service-app/container/scripts/: replace_configs.sh  run.sh  start_process.sh
270-delegate-service-app/src/test/resources/: test-config-delegate-service.yml
360-cg-manager/: BUILD.bazel  config.yml  config1.yml  config_delegate_svc.yml  config_secret_manager_refferences.yml  pom.xml
360-cg-manager/container/: BUILD.bazel
360-cg-manager/container/scripts/: replace_configs.sh  start_process.sh
360-cg-manager/src/main/resources/: modified_config.yml
441-cg-instance-sync/: BUILD.bazel
441-cg-instance-sync/src/main/java/io/harness/: CGInstanceSyncModule.java  InstanceSyncEmptyClass.java
834-user-beans/: .gitignore  BUILD.bazel
834-user-service/: .gitignore  BUILD.bazel
867-polling-contracts/: BUILD.bazel
867-polling-contracts/src/main/java/io/harness/: DummyFile.java
870-cg-yaml-beans/: BUILD.bazel
900-runtime-usage-sdk/: BUILD.bazel
920-delegate-agent-beans/: BUILD.bazel  pom.xml
920-delegate-agent-beans/src/main/proto/: BUILD.bazel
925-access-control-service/: BUILD.bazel  config.yml
925-access-control-service/container-image/scripts/: start_process.sh
925-access-control-service/container/scripts/: run.sh  start_process.sh
940-plan-feature-sdk/: BUILD.bazel
940-plan-feature-sdk/src/main/resources/features/: example_features.yml
947-access-control-migration/: .gitignore  BUILD.bazel
950-events-framework-monitor/: BUILD.bazel
950-events-framework-monitor/container/scripts/: replace_configs.sh
950-events-framework-monitor/src/main/java/service/: RedisStreamsMetricsAggregator.java  RedisStreamsMetricsAggregatorImpl.java
950-events-framework-monitor/src/main/resources/metrics/metricDefinitions/: redis_stream_account_metrics.yaml
950-ng-authentication-service/: BUILD.bazel
959-file-service-commons/: BUILD.bazel
959-psql-database-models/: BUILD.bazel  pom.xml
960-expression-service/: BUILD.bazel
970-api-services-beans/src/main/proto/: BUILD.bazel
985-version/: BUILD.bazel  pom.xml
commons/go/lib/archive/: BUILD.bazel  archive.go  archive_test.go
commons/go/lib/archive/mocks/: BUILD.bazel  archive_mock.go
commons/go/lib/awsutils/: BUILD.bazel  s3_session.go  s3_uploader.go  s3_uploader_test.go
commons/go/lib/awsutils/mocks/: BUILD.bazel  s3_uploader_mock.go
commons/go/lib/gcputils/: BUILD.bazel  gcs.go  gcs_adapter.go  gcs_adapter_mock.go  gcs_test.go
commons/go/lib/gcputils/mocks/: BUILD.bazel  gcs_mock.go
product/ci/engine-tester/: BUILD.bazel  main.go
product/ci/scm/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
product/ci/scm/converter/: BUILD.bazel  branch.go  comment.go  common.go  pr.go  pr_test.go  push.go
product/ci/scm/file/: BUILD.bazel  bitbucket_cloud_test.go  file.go  file_test.go  github_test.go  gitlab_test.go
product/ci/scm/git/: BUILD.bazel  bitbucket_cloud_test.go  git.go  git_test.go  github_test.go  gitlab_test.go
product/ci/scm/git/testdata/: repos.json
product/ci/scm/gitclient/: BUILD.bazel  gitclient.go  gitclient_test.go
product/ci/scm/grpc/: BUILD.bazel  handler.go  handler_test.go  server.go  server_test.go
product/ci/scm/grpc/client/: BUILD.bazel  scm_client.go  scm_client_test.go
product/ci/scm/grpc/mocks/: BUILD.bazel  server_mock.go
product/ci/scm/parser/: BUILD.bazel  parser.go  parser_test.go
product/ci/scm/parser/testdata/: branch_delete.json  branch_delete.json.golden
product/ci/scm/proto/: scm.proto
product/ci/scm/repo/: BUILD.bazel  bitbucket_cloud_test.go  bitbucket_server_test.go  github_test.go  gitlab_test.go  repo.go  repo_test.go
product/ci/scm/test/unix_socket_client/: BUILD.bazel  main.go
product/log-service/handler/: BUILD.bazel  handler.go  header.go  helper.go  middleware.go  middleware_test.go  store.go  stream.go  token.go
(+24361 files in other folders)
