# Refer for a list of all gazelle directives: http://www.lib4dev.in/info/bazelbuild/bazel-gazelle/112655189
# gazelle:exclude src/vendor
# gazelle:exclude vendor
# gazelle:exclude build
# gazelle:exclude */target
# gazelle:exclude {990-commons-test,980-commons,970-grpc,970-api-services-beans,960-notification-beans,950-timeout-engine,950-delegate-tasks-beans,950-events-api,22-ng-delegate-service-beans,24-manager-delegate-service-beans,24-ng-manager-service-beans,890-pms-contracts,400-rest,460-capability}

# gazelle:exclude .git/
# gazelle:exclude pkg/
## gazelle:proto_strip_import_prefix /proto/harness.io/

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/wings-software/portal
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "nogo")

buildifier(
    name = "buildifier",
)

nogo(
    name = "nogo_vet",
    vet = True,
    visibility = ["//visibility:public"],
)

########################################################################################################
####################################################  JAVA Starts Here    ####################################################
########################################################################################################

load("//tools/bazel/sonarqube:defs.bzl", "sonarqube")
load("//tools/bazel/sonarqube:defs.bzl", "get_sonar_targets")

java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "lombok",
    exported_plugins = [":lombok_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven//:org_projectlombok_lombok"],
)

modules = [
    "//990-commons-test",
]

filegroup(
    name = "git",
    srcs = glob(
        [".git/**/*"],
    ),
    tags = ["manual"],
)

filegroup(
    name = "coverage_report",
    srcs = ["bazel-out/_coverage/_coverage_report.dat"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_reports",
    srcs = glob(["bazel-testlogs/**/test.xml"]),
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

sonarqube(
    name = "sq",
    srcs = [],
    coverage_report = ":coverage_report",
    modules = get_sonar_targets(modules),
    project_key = "portal_bazel",
    project_name = "Bazel Portal",
    scm_info = [":git"],
    tags = ["manual"],
    targets = [],
)

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
        "keystore.jks",
    ],
    visibility = ["//visibility:public"],
)
