# Refer for a list of all gazelle directives: http://www.lib4dev.in/info/bazelbuild/bazel-gazelle/112655189
# gazelle:exclude src/vendor
# gazelle:exclude vendor
# gazelle:exclude build
# gazelle:exclude */target
# gazelle:exclude {990-commons-test,980-commons,970-ng-commons,970-grpc,970-api-services-beans,965-git-sync-commons,960-notification-beans,950-timeout-engine,950-delegate-tasks-beans,950-events-api,22-ng-delegate-service-beans,24-manager-delegate-service-beans,24-ng-manager-service-beans,890-pms-contracts,400-rest,460-capability,160-stress-tester}

# gazelle:exclude .git/
# gazelle:exclude pkg/
## gazelle:proto_strip_import_prefix /proto/harness.io/

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/wings-software/portal
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "nogo")

buildifier(
    name = "buildifier",
)

nogo(
    name = "nogo_vet",
    vet = True,
    visibility = ["//visibility:public"],
)

########################################################################################################
####################################################  JAVA Starts Here    ####################################################
########################################################################################################

load("//tools/bazel/sonarqube:defs.bzl", "sonarqube")
load("//tools/bazel/sonarqube:defs.bzl", "get_sonar_targets")

java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "lombok",
    exported_plugins = [":lombok_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven//:org_projectlombok_lombok"],
)

modules = [
    "//420-delegate-service",
    "//430-cv-nextgen-commons",
    "//440-connector-nextgen",
    "//450-ce-views",
    "//460-capability",
    "//490-ce-commons",
    "//800-pipeline-service",
    "//810-ng-triggers",
    "//820-platform-service",
    "//830-notification-service",
    "//850-execution-plan",
    "//850-ng-pipeline-commons",
    "//860-orchestration-steps",
    "//860-orchestration-visualization",
    "//870-cg-orchestration",
    "//870-orchestration",
    "//870-yaml-beans",
    "//876-orchestration-beans",
    "//879-pms-sdk",
    "//882-pms-sdk-core",
    "//884-pms-commons",
    "//890-sm-core",
    "//900-access-control-service",
    "//902-aggregator-module",
    "//903-decision-module",
    "//905-access-control-core",
    "//908-access-control-sdk",
    "//910-delegate-task-grpc-service",
    "//920-delegate-agent-beans",
    "//930-delegate-tasks",
    "//940-feature-flag",
    "//949-git-sync-sdk",
    "//950-delegate-tasks-beans",
    "//950-events-api",
    "//950-events-framework",
    "//950-log-client",
    "//950-ng-core",
    "//950-ng-project-n-orgs",
    "//950-timeout-engine",
    "//950-wait-engine",
    "//950-walktree-visitor",
    "//955-filters-sdk",
    "//955-setup-usage-sdk",
    "//960-api-services",
    "//960-expression-service",
    "//960-persistence",
    "//960-recaster",
    "//960-yaml-sdk",
    "//970-api-services-beans",
    "//970-grpc",
    "//970-ng-commons",
    "//980-commons",
    "//990-commons-test",
]

filegroup(
    name = "git",
    srcs = glob(
        [".git/**/*"],
    ),
    tags = ["manual"],
)

filegroup(
    name = "coverage_report",
    srcs = ["bazel-out/_coverage/_coverage_report.dat"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_reports",
    srcs = glob(["bazel-testlogs/**/test.xml"]),
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

sonarqube(
    name = "sq",
    srcs = [],
    coverage_report = ":coverage_report",
    modules = get_sonar_targets(modules),
    project_key = "portal_bazel",
    project_name = "Bazel Portal",
    scm_info = [":git"],
    tags = ["manual"],
    targets = [],
)

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
        "keystore.jks",
    ],
    visibility = ["//visibility:public"],
)
