load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "test_targets_list")
load("//tools/bazel/pmd:defs.bzl", "pmd")

shared_dependencies = [
    "@maven//:com_google_guava_guava",
] + [
    "//:lombok",
    "//125-cd-nextgen:module",
    "//400-rest:module",
    "//980-commons:module",
    "//970-ng-commons:module",
    "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    "@maven//:com_fasterxml_jackson_core_jackson_core",
    "@maven//:com_fasterxml_jackson_core_jackson_databind",
]

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)


#java_library(
#    name = "tests",
#    testonly = True,
#    srcs = glob(["src/test/**/*.java"]),
#    data = [
#        "//130-instance/src/test/resources:resource",
#    ],
#    resources = [
#        "//130-instance/src/test/resources:resource",
#    ],
#    visibility = ["//visibility:public"],
#    deps = shared_dependencies + [
#        ":module",
#        "//960-persistence:supporter-test",
#        "//990-commons-test:module",
#        "@maven//:io_dropwizard_dropwizard_testing",
#        "@maven//:io_github_benas_random_beans",
#        "@maven//:junit_junit",
#        "@maven//:org_assertj_assertj_core",
#        "@maven//:org_mockito_mockito_core",
#        "@maven//:org_powermock_powermock_module_junit4",
#        "@maven//:org_powermock_powermock_core",
#    ],
#)

#run_tests()

checkstyle()

pmd()
