load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_package_tests")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:macros.bzl", "run_analysis")

run_tests()

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//190-deployment-functional-tests/src/test/resources:resource",
    ] + ["//:resource"] + [
        "//260-delegate:module_deploy",
        "//360-cg-manager:module_deploy.jar",
    ],
    resources = [
        "//190-deployment-functional-tests/src/test/resources:resource",
    ],
    tags = [
        "aeriform",
        "manual",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//200-functional-test:module",
        "//200-functional-test:tests",
        "//230-model-test:module",
        "//990-commons-test:module",
        "@maven//:com_bertramlabs_plugins_hcl4j",
        "@maven//:com_github_tomakehurst_wiremock_jre8_standalone",
        "@maven//:com_icegreen_greenmail",
        "@maven//:com_openpojo_openpojo",
        "@maven//:io_github_benas_random_beans",
        "@maven//:junit_junit",
        "@maven//:org_apache_httpcomponents_httpmime",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_grizzly2",
        "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_inmemory",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:pl_pragmatists_JUnitParams",
    ],
)

run_analysis(
    run_pmd = False,
    run_sonar = False,
)
