load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sources")
load("//:macros.bzl", "sonarqube_test")
load("//:macros.bzl", "test_targets_list")
load("//tools/bazel/pmd:defs.bzl", "pmd")

sources()

shared_dependencies = [
    "//:lombok",
    "//980-commons:module",
    "//970-grpc:module",
    "//920-delegate-agent-beans:module",
    "@maven//:com_google_inject_guice",
    "@maven//:commons_collections_commons_collections",
    "@maven//:commons_io_commons_io",
    "@maven//:org_apache_commons_commons_lang3",
    "@maven//:org_zeroturnaround_zt_exec",
]

java_binary(
    name = "module",
    srcs = glob([
        "src/main/**/*.java",
        "src/generated/**/*.java",
    ]),
    data = ["//:resource"],
    main_class = "io.harness.watcher.app.WatcherApplication",
    resources = [
        "//250-watcher/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//250-watcher/src/main/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = shared_dependencies,
)

java_library(
    name = "tests",
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//250-watcher/src/test/resources:resource",
    ],
    resources = [
        "//250-watcher/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies + [
        "module",
        "//990-commons-test:module",
        "@maven//:org_awaitility_awaitility",
    ],
)

run_tests()

checkstyle()

sonarqube_test(
    name = "sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":module",
    ],
)

pmd()
