load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
    ],
    visibility = ["//visibility:private"],
)

java_binary(
    name = "module",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    data = [":resource"],
    main_class = "io.harness.delegate.app.DelegateServiceApplication",
    resources = [
        "//270-delegate-service-app/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//360-cg-manager:module",
        "//375-ce-graphql:module",
        "//380-cg-graphql:module",
        "//390-db-migration:module",
        "//400-rest:module",
        "//420-delegate-service:module",
        "//430-cv-nextgen-commons:module",
        "//460-capability:module",
        "//870-cg-orchestration:module",
        "//874-orchestration-delay:module",
        "//890-sm-core:module",
        "//910-delegate-service-driver:module",
        "//920-delegate-service-beans:module",
        "//937-persistence-tracer:module",
        "//940-feature-flag:module",
        "//950-events-framework:module",
        "//950-wait-engine:module",
        "//953-events-api:module",
        "//955-outbox-sdk:module",
        "//956-feature-flag-beans:module",
        "//959-timeout-engine:module",
        "//960-continuous-features:module",
        "//960-persistence:module",
        "//970-api-services-beans:module",
        "//970-grpc:module",
        "//970-ng-commons:module",
        "//970-rbac-core:module",
        "//980-commons:module",
        "//999-annotations:module",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_dirkraft_dropwizard_file_assets_dropwizard_file_assets",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_palominolabs_metrics_metrics_guice",
        "@maven//:com_smoketurner_dropwizard_swagger",
        "@maven//:commons_io_commons_io",
        "@maven//:io_dropwizard_bundles_dropwizard_configurable_assets_bundle",
        "@maven//:io_dropwizard_dropwizard_auth",
        "@maven//:io_dropwizard_dropwizard_configuration",
        "@maven//:io_dropwizard_dropwizard_core",
        "@maven//:io_dropwizard_dropwizard_jersey",
        "@maven//:io_dropwizard_dropwizard_lifecycle",
        "@maven//:io_dropwizard_metrics_metrics_annotation",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_cache_cache_api",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_atmosphere_atmosphere_runtime",
        "@maven//:org_coursera_metrics_datadog",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_servlets",
        "@maven//:org_glassfish_jersey_core_jersey_server",
        "@maven//:org_glassfish_jersey_media_jersey_media_multipart",
        "@maven//:org_hibernate_hibernate_validator",
        "@maven//:org_mongodb_morphia_morphia",
        "@maven//:org_reflections_reflections",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_core",
        "@maven//:ru_vyarus_guice_validator",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(
        ["src/test/**/*.java"],
    ),
    data = [
        "//270-delegate-service-app/src/test/resources:resource",
        "//400-rest/src/test/resources:resource",
    ],
    resources = [
        "//:resource",
        "//270-delegate-service-app/src/test/resources:resource",
        "//400-rest/src/main/resources:resource",
        "//980-commons/src/main/resources:resource",
        "//980-commons/src/main/resources-filtered:resource",
        "//980-commons/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//400-rest/src/main/resources",
        "//980-commons/src/main/resources",
        "//980-commons/src/main/resources-filtered:resources",
        "//980-commons/src/test/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = [
        ":module",
        "//400-rest:supporter-test",
        "//955-alert-beans:module",
        "//990-commons-test:module",
        "@maven//:com_icegreen_greenmail",
        "@maven//:com_openpojo_openpojo",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:io_github_benas_random_beans",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_grizzly2",
        "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_inmemory",
        "@maven//:org_mockito_mockito_core",
        "@maven//:pl_pragmatists_JUnitParams",
    ],
)

run_tests()

run_analysis()

exports_files([
    "keystore.jks",
    "newrelic.yml",
    "delegate-service-config.yml",
])
