load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("//:tools/bazel/harness.bzl", "harness_java_binary")

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
    ],
    visibility = ["//visibility:private"],
)

harness_java_binary(
    name = "module",
    srcs = glob([
        "src/main/**/*.java",
    ]),
    data = [":resource"],
    main_class = "software.wings.app.WingsApplication",
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//390-db-migration:module",
        "//400-rest:module",
    ],
)

run_analysis(
    run_checkstyle = False,
    run_pmd = False,
)
