load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "@maven//:com_google_guava_guava",
] + [
    "//:lombok",
    "//870-cg-orchestration:module",
    "//950-delegate-tasks-beans:module",
    "//955-delegate-beans:module",
    "//956-feature-flag-beans:module",
    "//957-cg-beans:module",
    "//960-persistence:module",
    "//970-api-services-beans:module",
    "//980-commons:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

run_analysis()
