load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "//970-rbac-core:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//834-user-service/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies + [
        "//:lombok",
    ],
)

run_analysis()
