load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_jars = [
        "//867-polling-contracts/src/main/proto:867_polling_contracts_java_proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//867-polling-contracts/src/main/proto:867_polling_contracts_java_proto",
        "//970-grpc:module",
        "//980-commons:module",
        "@maven//:com_google_inject_guice",
        "@maven//:io_grpc_grpc_alts",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_auth",
        "@maven//:io_grpc_grpc_context",
        "@maven//:io_grpc_grpc_core",
        "@maven//:io_grpc_grpc_grpclb",
        "@maven//:io_grpc_grpc_netty",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_services",
        "@maven//:io_grpc_grpc_stub",
    ],
)

run_analysis()
