load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sonarqube_test")
load("//tools/bazel/pmd:defs.bzl", "pmd")
load("//:macros.bzl", "sources")

sources()

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
        "//870-cg-yaml-beans/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//980-commons:module",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_guava",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
        "@maven//:javax_activation_activation",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:javax_cache_cache_api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:javax_xml_bind_jaxb_api",
        "@maven//:javax_xml_soap_javax_xml_soap_api",
        "@maven//:javax_xml_ws_jaxws_api",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_apache_commons_commons_compress",
        "@maven//:org_apache_commons_commons_csv",
        "@maven//:org_apache_commons_commons_email",
        "@maven//:org_apache_commons_commons_exec",
        "@maven//:org_apache_commons_commons_jexl3",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_math3",
        "@maven//:org_apache_commons_commons_text",
    ],
)

checkstyle()

sonarqube_test(
    name = "sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":module",
    ],
)

pmd()
