load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "GTM"

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//980-commons:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_inject_guice",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_hibernate_hibernate_validator",
        "@maven//:org_modelmapper_modelmapper",
        "@maven//:org_mongodb_morphia_morphia",
    ],
)

run_analysis()
