load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_jars = [
        "//920-delegate-agent-beans/src/main/proto:920_delegate_agent_beans_java_proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//925-watcher-beans:module",
        "//980-commons:module",
        "//999-annotations:module",
        "@maven//:com_esotericsoftware_kryo",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_squareup_okhttp3_okhttp",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//925-watcher-beans:module",
        "//980-commons:module",
        "//990-commons-test:module",
        "@maven//:com_google_guava_guava",
        "@maven//:commons_io_commons_io",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
    ],
)

run_tests()

run_analysis()
