load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//948-access-control-sdk:module",
        "//956-feature-flag-beans:module",
        "//960-ng-core-beans:module",
        "//960-ng-license-beans:module",
        "//970-ng-commons:module",
        "//970-rbac-core:module",
        "@maven//:com_fasterxml_jackson_jaxrs_jackson_jaxrs_yaml_provider",
        "@maven//:com_google_inject_guice",
        "@maven//:com_squareup_retrofit2_retrofit",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
)

run_analysis()
