load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:macros.bzl", "run_analysis")

shared_dependencies = [
    "//:lombok",
    "//948-access-control-admin-client:module",
]

java_binary(
    name = "module",
    srcs = glob([
        "src/main/**/*.java",
        "src/generated/**/*.java",
    ]),
    data = ["//:resource"],
    main_class = "io.harness.ng.NextGenApplication",
    resources = [
        "//947-access-control-migration/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//947-access-control-migration/src/main/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = shared_dependencies,
)

run_analysis()
