load("//:tools/bazel/harness.bzl", "java_binary")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "PL"

java_binary(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    data = ["//:resource"],
    main_class = "io.harness.eventsframework.monitor.EventsFrameworkMonitorApplication",
    resource_jars = [],
    resources = [
        "//950-events-framework-monitor/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = [
        "//:lombok",
        "//953-events-api:module",
        "//960-persistence:module",
        "//970-ng-commons:module",
        "//980-commons:module",
        "//999-annotations:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_dropwizard_dropwizard_configuration",
        "@maven//:io_dropwizard_dropwizard_core",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_glassfish_jersey_media_jersey_media_multipart",
        "@maven//:org_redisson_redisson",
        "@maven//:org_reflections_reflections",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

run_analysis()
