load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("//:tools/bazel/JavaPackageRules.bzl", "java_package")

shared_dependencies = [
    "//:lombok",
    "//950-ng-core:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

run_analysis()
