load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    resources = [],
    visibility = ["//visibility:public"],
    exports = [
        "//959-file-service-commons/src/main/java/io/harness/delegate/beans:module",
        "//959-file-service-commons/src/main/java/io/harness/file:module",
        "//959-file-service-commons/src/main/java/io/harness/serializer:module",
        "//959-file-service-commons/src/main/java/software/wings/service/intfc:module",
        "//959-file-service-commons/src/main/java/software/wings/service/impl:module",
    ],
)

run_analysis()
