load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//959-file-service-commons/src/main/java/io/harness/delegate/beans:module",
        "//959-file-service-commons/src/main/java/io/harness/file:module",
        "//959-file-service-commons/src/main/java/io/harness/serializer:module",
        "//959-file-service-commons/src/main/java/software/wings/service/intfc:module",
        "@maven//:com_google_cloud_google_cloud_storage",
    ],
)

run_analysis()
