load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "CE"

shared_dependencies = [
    "//:lombok",
    "//970-ng-commons:module",
    "@maven//:com_google_inject_guice",
    "@maven//:org_jooq_jooq",
    "@maven//:org_springframework_data_spring_data_commons",
    "@maven//:org_springframework_data_spring_data_mongodb",
    "@maven//:org_springframework_guice_spring_guice",
    "@maven//:org_springframework_spring_core",
]

java_library(
    name = "module",
    srcs = glob([
        "src/generated/**/*.java",
        "src/main/**/*.java",
    ]),
    tags = [
        "aeriform",
        "manual",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    tags = [
        "aeriform",
        "manual",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies + [
        ":module",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
    ],
)

run_tests()

run_analysis()
