load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_jars = [
        "//960-expression-service/src/main/proto/io/harness/expression/service:960_expression_service_java_proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//960-expression-service/src/main/proto/io/harness/expression/service:960_expression_service_java_proto",
        "//970-grpc:module",
        "//980-commons:module",
        "//999-annotations:module",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:com_google_inject_guice",
        "@maven//:commons_io_commons_io",
        "@maven//:commons_logging_commons_logging",
        "@maven//:commons_validator_commons_validator",
        "@maven//:de_javakaffee_kryo_serializers",
        "@maven//:io_dropwizard_dropwizard_lifecycle",
        "@maven//:io_dropwizard_dropwizard_logging",
        "@maven//:io_dropwizard_dropwizard_validation",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_dropwizard_metrics_metrics_healthchecks",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_services",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:io_prometheus_simpleclient_dropwizard",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:joda_time_joda_time",
        "@maven//:net_jodah_failsafe",
        "@maven//:net_openhft_chronicle_queue",
        "@maven//:net_openhft_chronicle_wire",
        "@maven//:net_sf_json_lib_json_lib_jdk15",
        "@maven//:org_apache_commons_commons_csv",
        "@maven//:org_apache_commons_commons_jexl3",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_apache_httpcomponents_httpcore",
        "@maven//:org_eclipse_jgit_org_eclipse_jgit",
        "@maven//:org_hibernate_hibernate_validator",
        "@maven//:org_modelmapper_modelmapper",
        "@maven//:org_mongodb_morphia_morphia",
        "@maven//:org_objenesis_objenesis",
        "@maven//:org_reflections_reflections",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = [
        "//960-expression-service/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "module",
        "//:lombok",
        "//970-grpc:module",
        "//980-commons:module",
        "//990-commons-test:module",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_inject_guice",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_core",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

run_tests()

run_analysis()
